--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "express": "4.17.1",
     "mongoose": "5.10.7",
     "cors": "2.8.5",
+    "bcryptjs": "2.4.3",
+    "jsonwebtoken": "8.5.1",
     "body-parser": "1.19.0",
-    "mongodb": "^3.6.2"
+    "mongodb": "^3.6.2",
+    "passport": "0.4.1",
+    "passport-jwt": "4.0.0"
   },
   "author": "ankit kejriwal",
   "license": "ISC"
