--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@auth0/angular-jwt": "^5.0.1",
     "@types/jquery": "^3.5.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "v4": "0.0.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
